@@ -1,6 +1,6 @@
 {
    "Name" : "QTermWidget",
-   "Version" : "1.0.0",
+   "Version" : "1.2.0",
    "Vendor" : "LXQt",
    "Copyright" : "(C) 2022 LXQt",
    "Url" : "https://github.com/lxqt/qtermwidget",
